# bash-curl-attack

./: Cargo.toml  README.md
src/: main.rs
